--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <div class="col-lg-4 col-md-12">
           <div class="card" style="background-color: #fb4563 !important" data-aos="fade-up" data-aos-delay="100"> 
             <div class="card-body">
+              <h1>Ini Judul</h1>
               <h5 class="card-title">Total Positif</h5>
               <p class="card-text">12.212</p>
               <p class="card-subtitle">Orang</p>
