--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="card-body">
               <h5 class="card-title">Vaksinasi 2</h5>
               <p class="card-text">100.000</p>
-              <p class="card-subtitle">Orang</p>
+              <p class="card-subtitle">Data</p>
             </div>
           </div>
         </div>
