--- a/index.html
+++ b/index.html
@@ -1,146 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+<html lang="id">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>My First Site</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header class="site-header">
+			<h1>Halo! Ini website belajarku</h1>
+			<p class="subtitle">Ngulik HTML • CSS • JS • GitHub</p>
+		</header>
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+		<main class="container">
+			<section id="about" class="card">
+				<h2>Tentang</h2>
+				<p>Ini contoh website sederhana. Klik tombol di bawah buat liat interaksi JavaScript.</p>
+				<button id="magicBtn">Klik aku</button>
+			</section>
 
-    <title>Data Covid Indonesia</title>
-  </head>
-  <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-fixed-top" data-aos="zoom-in"
-    >
-      <div class="container">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <ul class="navbar-nav mr-auto">
-            <li>
-              <a class="navbar-brand" href="#">Covid </a>
-            </li>
-          </ul>
-          <ul class="navbar-nav">
-            <li>
-              <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li>
-              <a class="nav-link" href="#">Vaksin</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+			<section id="notes" class="card">
+				<h2>Catatan</h2>
+				<ul id="notesList"></ul>
+				<input id="noteInput" placeholder="Tambah catatan..." />
+				<button id="addNote">Tambah</button>
+			</section>
+		</main>
 
-    <div class="container page-content" data-aos="zoom-in">
-      <h2 class="text-center mb-3">Data Covid Indonesia</h2>
-      <div class="row">
-        <div class="col-lg-4 col-md-12">
-          <div class="card" style="background-color: #fb4563 !important" data-aos="fade-up" data-aos-delay="100"> 
-            <div class="card-body">
-              <h1>Ini Judul</h1>
-              <h5 class="card-title">Total Positif</h5>
-              <p class="card-text">12.212</p>
-              <p class="card-subtitle">Orang</p>
-              <p class="text-center emoji">&#128532</p>  
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="card" style="background-color: #06d0b3 !important" data-aos="fade-up" data-aos-delay="200">
-            <div class="card-body">
-              <h5 class="card-title">Total Sembuh</h5>
-              <p class="card-text">50.123</p>
-              <p class="card-subtitle">Orang</p>
-              <p class="text-center emoji">&#128522</p>  
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="card" style="background-color: #f057a9 !important" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-body">
-              <h5 class="card-title">Total Meninggal</h5>
-              <p class="card-text">101.210</p>
-              <p class="card-subtitle">Orang</p>
-              <p class="text-center emoji">&#128557</p>  
-            </div>
-          </div>
-        </div>
-      </div>
+		<footer class="site-footer">
+			<small>Made with ❤️ — Belajar GitHub</small>
+		</footer>
 
-      <h2 class="text-center mt-3">Data Vaksinasi Indonesia</h2>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="card" style="background-color: #abaaaa !important" data-aos="fade-up" data-aos-delay="100"> 
-            <div class="card-body">
-              <h5 class="card-title">Total Sasaran</h5>
-              <p class="card-text">12.212</p>
-              <p class="card-subtitle">Orang</p>
-              <p class="text-center emoji">&#128137</p>  
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card" style="background-color: #8c8c8c !important" data-aos="fade-up" data-aos-delay="200">
-            <div class="card-body">
-              <h5 class="card-title">Vaksinasi 1</h5>
-              <p class="card-text">50.123</p>
-              <p class="card-subtitle">Orang</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card" style="background-color: #5f5f5f !important" data-aos="fade-up" data-aos-delay="300">
-            <div class="card-body">
-              <h5 class="card-title">Vaksinasi 2</h5>
-              <p class="card-text">100.000</p>
-              <p class="card-subtitle">Data</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+		<script src="script.js"></script>
+	</body>
 </html>
